--- a/tensorMCCA/NAMESPACE
+++ b/tensorMCCA/NAMESPACE
@@ -1,3 +1,4 @@
 export("check.arguments", "deflate.v", "deflate.x", "image.scores",
-       "init.v.ones", "init.v.random", "init.v.svd", "init.v.svd2", "InnerProd",
-       "mCCA.cor", "objective.cor", "permutation.test", "scale.v")
+	"init.v.ones", "init.v.random", "init.v.svd", "init.v.svd2", "InnerProd",
+	"mCCA.cor", "mCCA.cov", "objective.cor", "objective.cov", "permutation.test", 
+	"scale.v", "tnsr3d.rk1")
