CCA-based Initialization

--- a/tensorMCCA/DESCRIPTION
+++ b/tensorMCCA/DESCRIPTION
@@ -7,4 +7,4 @@ Author: David Degras
 Maintainer: David Degras <david.degras@umb.edu>
 Description: A package for multiple canonical correlation analysis (mCCA) with data tensors measured on the same individuals/objects. The goal is to find canonical tensors that maximize sums of covariances or sums of correlations between pairs of datasets under orthogonality constraints. The functions in the package implement initialization algorithms (random, SVD), optimization algorithms (block coordinate ascent, gradient), as well as permutation tests to select the number of canonical components to retain. 
 License: GPL-3.0
-Imports: RSpectra, parallel, MASS
+Imports: RSpectra, parallel, MASS, geigen
