--- a/tensorMCCA/NAMESPACE
+++ b/tensorMCCA/NAMESPACE
@@ -1,4 +1,21 @@
-export("canon.scores", "check.arguments", "deflate.x", "hosvd", "mcca.init.random", "mcca.init.cca", "mcca.init.svd", "mcca.cor", "mcca.cov", "objective.cor", "objective.cov", "permutation.test", "scale.v", "tnsr3d.rk1", "tnsr.rk1")
+export(
+"canon.scores",
+"check.arguments",
+"deflate.x",
+"hosvd",
+"mcca.init.random",
+"mcca.init.cca",
+"mcca.init.svd",
+"mcca.cor",
+"mcca.cov",
+"objective.cor",
+"objective.cov",
+"objective.gradient",
+"permutation.test",
+"scale.v",
+"tnsr3d.rk1",
+"tnsr.rk1"
+)
 importFrom("MASS", "ginv")
 importFrom("parallel", "mclapply")
 importFrom("RSpectra", "svds", "eigs_sym")
