--- a/tensorMCCA/NAMESPACE
+++ b/tensorMCCA/NAMESPACE
@@ -13,8 +13,12 @@ export(
 "objective.gradient",
 "permutation.test",
 "scale.v",
+"tnsr.mat.prod",
+"tnsr.vec.prod",
 "tnsr3d.rk1",
-"tnsr.rk1"
+"tnsr.rk1",
+"tnsr.rk1.cp",
+"tnsr.rk1.nrm"
 )
 importFrom("MASS", "ginv")
 importFrom("parallel", "mclapply")
