Bootstrapping functions: initial commit

--- a/tensorMCCA/NAMESPACE
+++ b/tensorMCCA/NAMESPACE
@@ -3,11 +3,13 @@ export(
 "check.arguments",
 "deflate.x",
 "hosvd",
-"mcca.init.random",
-"mcca.init.cca",
-"mcca.init.svd",
+"mcca.boot",
+"mcca.boot.ci",
 "mcca.cor",
 "mcca.cov",
+"mcca.init.cca",
+"mcca.init.random",
+"mcca.init.svd",
 "objective.cor",
 "objective.cov",
 "objective.gradient",
