--- a/tensorMCCA/NAMESPACE
+++ b/tensorMCCA/NAMESPACE
@@ -14,6 +14,7 @@ export(
 "objective.cor",
 "objective.cov",
 "objective.gradient",
+"outer.prod",
 "permutation.test",
 "scale.v",
 "simulate.factor.model",
