--- a/tensorMCCA/NAMESPACE
+++ b/tensorMCCA/NAMESPACE
@@ -18,7 +18,8 @@ export(
 "outer.prod",
 "permutation.test",
 "scale.v",
-"simulate.factor.model",
+"simulate.factor.model.cor",
+"simulate.factor.model.cov",
 "simulate.v",
 "tnsr.mat.prod",
 "tnsr.vec.prod",
